--- a/templates/faculty_list/IPCR_Remarks.html
+++ b/templates/faculty_list/IPCR_Remarks.html
@@ -914,7 +914,7 @@
 <p style="position:absolute;top:1003px;left:867px;white-space:nowrap" class="ft31">&#160;</p>
 <p style="position:absolute;top:1056px;left:651px;white-space:nowrap" class="ft35">&#160;<br/>&#160;<br/>&#160;</p>
 <p style="position:absolute;top:1056px;left:736px;white-space:nowrap" class="ft31">&#160;</p>
-<button type="submit" style="position:absolute;top:1056px;left:736px;white-space:nowrap" class="ft31">Submit</button>
+<button type="submit">Submit</button>
 </form>
 </div>
 </body>
