--- a/templates/faculty_list/superadmin_faculty_list.html
+++ b/templates/faculty_list/superadmin_faculty_list.html
@@ -47,7 +47,7 @@
       <div class="home_admin" style="position: absolute; width: 139px; height: 20px; left: 920px; top: 283px; font-family: 'Inter'; font-style: italic; font-weight: 700; font-size: 16px; line-height: 19px; text-align: center; color: #FFFFFF;">Faculty List</div>
       <button class="menu_dashboard_admin" style="position: absolute; width: 172px; height: 42px; left: 696px; top: 273px; background: #ffffff; opacity: 0.4; border-radius: 18px;font-family: 'Inter'; font-style: italic; font-weight: 700; font-size: 16px; line-height: 19px; text-align: center; color: #FFFFFF"><a href="{% url 'dashboard_admin_superadmin' %}">Dashboard</a></button>
       <button class="menu_faculty_list_admin" style="position: absolute; width: 172px; height: 42px; left: 904px; top: 273px; background: #ffffff; opacity: 0.4; border-radius: 18px;font-family: 'Inter'; font-style: italic; font-weight: 700; font-size: 16px; line-height: 19px; text-align: center; color: #ffffff"></div>
-      <button class="menu_notifications_admin" style="position: absolute; width: 172px; height: 42px; left: 1112px; top: 273px; background: #ffffff; opacity: 0.4; border-radius: 18px;font-family: 'Inter'; font-style: italic; font-weight: 700; font-size: 16px; line-height: 19px; text-align: center; color: #ffffff"><a href="{% url 'admin_faculty_list' %} ">Notification</a></button>
+      <button class="menu_notifications_admin" style="position: absolute; width: 172px; height: 42px; left: 1112px; top: 273px; background: #ffffff; opacity: 0.4; border-radius: 18px;font-family: 'Inter'; font-style: italic; font-weight: 700; font-size: 16px; line-height: 19px; text-align: center; color: #ffffff"><a href="{% url 'admin_superadmin_notification' %} ">Notification</a></button>
       <button class="settings_icon_super" style="position: absolute; width: 75px; height: 42px; left: 1312px; top: 273px; background: #7d7676; opacity: 0.4; border-radius: 18px;"><a href="{% url 'settings' %}"><img src="{% static 'home/img/settings_icon.png' %}"></a></button>
   </section>
 
@@ -126,28 +126,4 @@
 
 
 
-<ul>
-  {% for user in users %}
-    <li>
-      {% if selected_group %}
-        <a href="{% url 'superadmin_faculty_list' group_id=selected_group.id user_id=user.id %}">{{ user.get_full_name }}</a>
-      {% else %}
-        <a href="{% url 'superadmin_faculty_list' user_id=user.id %}">{{ user.get_full_name }}</a>
-      {% endif %}
-    </li>
-  {% empty %}
-    <li>No users found.</li>
-  {% endfor %}
-</ul>
 
-{% if selected_user %}
-  <div>
-    <h3>User Details</h3>
-    <p>Username: {{ selected_user.username }}</p>
-    <p>Full Name: {{ selected_user.get_full_name }}</p>
-    <p>Email: {{ selected_user.email }}</p>
-    {% if 'Admin_Director' in user_group_names %}
-    <button><a href="{% url 'IPCR_Approval' user_id=selected_user.id %}" target="_blank">Approve IPCR</a></button>
-    {% endif %}
-  </div>
-{% endif %}
