--- a/templates/notification/admin_superadmin_notification.html
+++ b/templates/notification/admin_superadmin_notification.html
@@ -1,14 +1,109 @@
+<html>
+  <head>
+  {% load static %}
+  <meta charset = "utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type = "text/css" href="css/style.css">
+  <link rel="stylesheet"href = "https://unpkg.com/boxiconx@latest/css/boxicons.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'notifications/style.css' %}">
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css";>
+  <!--DEFAULT DESIGN-->
+  <div class="title"> 
+  <div class = "lspu_bg">
+          <img src="{% static 'home/img/background.png' %} "class="center" >
+      </div>
+  <div class = "white_bg"></div>
+  <div class = "lspu_header"> 
+          <img src="{% static 'home/img/LSPU_header.png' %}"> </div>
+  <div class = "avatar_bg"></div>
+  <div class = "avatar">
+      <img src="{% static 'home/img/avatar.png' %} "class="center" ></div>  
+  <div class = "acc_name_bg"></div>
+  <div class = "acc_name_placeholder">{{user.get_full_name}}</div>
+  <div class ="logout_bg">
+      <button class="logout"><a href="{% url 'logout' %}">Logout</a></button></div>
+  </head>
+
+   <body>
+      <div class = "home_bg">
+    
+
+<section class ="download_menu" id="download_menu">
+    <!-- <div class ="ipcr_home"></div> -->
+    
+    <div class="menu_home_admin" style="position: absolute; width: 172px; height: 42px; left: 280px; top: 30px; background-color: #ffffff; opacity: 0.4; border-radius: 18px;"></div>
+    <div class="home_admin" style="position: absolute; width: 139px; height: 20px; left: 295px; top: 40px; font-family: 'Inter'; font-style: italic; font-weight: 700; font-size: 16px; line-height: 19px; text-align: center; color: #FFFFFF;"><a href="{% url 'superadmin_home' %}"></a>Home</div>
+     <!--<div class ="menu_faculty_list"></div> -->
+    <button class="menu_dashboard_admin" style="position: absolute; width: 172px; height: 42px; left: 480px; top: 30px; background: #ffffff; opacity: 0.4; border-radius: 18px;font-family: 'Inter'; font-style: italic; font-weight: 700; font-size: 16px; line-height: 19px; text-align: center; color: #FFFFFF"><a href="{% url 'dashboard' %}">Dashboard</a></button>
+     <!--<div class ="menu_settings"></div>-->
+    <button class="menu_faculty_list_admin" style="position: absolute; width: 172px; height: 42px; left: 685px; top: 30px; background: #ffffff; opacity: 0.4; border-radius: 18px;font-family: 'Inter'; font-style: italic; font-weight: 700; font-size: 16px; line-height: 19px; text-align: center; color: #ffffff"><a href="{% url 'admin_faculty_list' %} ">Faculty List</a></button>
+    <button class="menu_notifications_admin" style="position: absolute; width: 172px; height: 42px; left: 880px; top: 30px; background: #ffffff; opacity: 0.4; border-radius: 18px;font-family: 'Inter'; font-style: italic; font-weight: 700; font-size: 16px; line-height: 19px; text-align: center; color: #ffffff"><a href="{% url 'member_notification' %}">Notifications</a></button>
+     <!--<div class ="menu_settings"></div>-->
+    <button class="settings_icon_super" style="position: absolute; width: 75px; height: 42px; left: 1075px; top: 30px; background: #7d7676; opacity: 0.4; border-radius: 18px;"><a href="{% url 'settings' %}"><img src="{% static 'home/img/settings_icon.png' %}"></a></button>
+ </section>
+
+<button type="button" class="collapsible"><a href="{% url 'create_notification' %}">Create post</a></button>
+
 {% for notification in recent_notifications %}
     <div>
-        <h3>Posted by {{ notification.author.get_full_name}}</h3>
-        <p>Date Posted: {{ notification.date_posted }}</p>
-        <p>{{ notification.new_post }}</p>
+        <div class = "notify">Notifications</div>
+        <button type="button" class="collapsible">Posted by {{ notification.author.get_full_name }}</button>
+        <div class="content">
+            <p>Date Posted: {{ notification.date_posted }}</p>
+            <p>{{ notification.new_post }}</p>
     </div>
+{% empty %}
+    <p>No notifications found.</p>
 {% endfor %}
 
-<button><a href="{% url 'create_notification' %}">Create post</a></button>
 
 {% if current_date <= deadline_date and days_until_deadline <= 15 %}
-    <h2>Deadline Upcoming!!</h2>
-    <p>The deadline is approaching within {{ days_until_deadline }} days. The upcoming deadline date is: {{ deadline_date }}</p>
-{% endif %}
+    <div class = "deadlines">Deadlines</div>
+    <button type="button" class="collapsible_2">Deadline Upcoming!!</button>
+    <div class="content">
+    <p>The deadline for the IPCR form is approaching within {{ days_until_deadline }} days. The upcoming deadline date is: {{ deadline_date }}</p>
+    {% endif %}
+    
+    <script>
+        var coll = document.getElementsByClassName("collapsible");
+        var i;
+        
+        for (i = 0; i < coll.length; i++) {
+          coll[i].addEventListener("click", function() {
+            this.classList.toggle("active");
+            var content = this.nextElementSibling;
+            if (content.style.display === "block") {
+              content.style.display = "none";
+            } else {
+              content.style.display = "block";
+            }
+          });
+        }
+        </script>
+        
+    <script>
+        var coll = document.getElementsByClassName("collapsible_2");
+        var i;
+        
+        for (i = 0; i < coll.length; i++) {
+          coll[i].addEventListener("click", function() {
+            this.classList.toggle("active");
+            var content = this.nextElementSibling;
+            if (content.style.display === "block") {
+              content.style.display = "none";
+            } else {
+              content.style.display = "block";
+            }
+          });
+        }
+        </script>
+
+        <button><a href="{% url 'create_notification' %}">Create post</a></button>
+
+
+    
